//go:generate protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative hello.proto
syntax = "proto3";

option go_package = "github.com/kyma-project/networking-dev-tools/grpcbin/pkg/hello";
option java_multiple_files = true;
option java_package = "io.grpc.examples.hello";
option java_outer_classname = "HelloProto";

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
  rpc StreamGoats (Pen) returns (stream Goat) {}
  rpc ListGoats (Pen) returns (GoatList) {}
}

message GoatList {
  repeated Goat goats = 1;
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

message Goat {
  string name = 1;
}

message Pen {
  string name = 1;
}

